# doornegar

./: .gitignore  CLAUDE.md  DEVLOG.md  ONBOARDING.md  docker-compose.yml  nixpacks.toml
backend/: .env.example  Dockerfile  Procfile  alembic.ini  auto_maintenance.py  manage.py  model_comparison_results.md  nixpacks.toml  pyproject.toml  qa_check.py  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_embedding_to_jsonb.py  003_add_rater_feedback.py  0a7c08d01fe5_add_improvement_feedback_table.py  225d1a5e311f_add_analyst_json_and_image_url_to_topics.py  4d99807e3652_add_media_dimensions_to_sources.py  6f0c2571cf5e_add_topics_and_topic_articles_tables.py  a2b3c4d5e6f7_ingest_egress_converted_at_and_indexes.py  ab8b36cf5aad_add_source_suggestions_table.py  b5e9f3a1c2d8_add_llm_failed_at_and_image_checked_at.py  c7d4e2f8a1b3_add_device_info_to_improvements.py  d8e5f1a2b3c4_add_story_centroid_embedding.py  e9f7a3d5c8b1_add_is_edited_to_stories.py  f1a2b3c4d5e6_add_lazy_jsonb_columns_on_stories.py  g2b3c4d5e6f7_add_hourly_update_signal.py  h3c4d5e6f7g8_add_audit_notes.py  i4d5e6f7g8h9_add_user_submissions.py  j5e6f7g8h9i0_extend_user_submissions.py  k6f7g8h9i0j1_add_content_hash_to_submissions.py  l7g8h9i0j1k2_add_story_arcs.py  m8h9i0j1k2l3_add_cluster_attempts.py  n9i0j1k2l3m4_add_story_guardrails.py  o0j1k2l3m4n5_add_story_events.py  p1k2l3m4n5o6_add_worldview_digests.py  q2l3m4n5o6p7_feedback_loop_extensions.py  r3m4n5o6p7q8_source_trust_orphan_tracking.py  s4n5o6p7q8r9_freshness_archival.py  t5o6p7q8r9s0_summary_anchor.py  u6p7q8r9s0t1_content_type_filter.py  (+6 more)
backend/app/: config.py  database.py  main.py  rate_limit.py
backend/data/: source_scores.json
backend/scripts/: audit_worldview_coverage.py  backfill_zero_embeddings.py  clean_slate_2026-05-12.sql  compare_models.py  dariush_data_analyst.py  dariush_report.json  diag_cluster_attempts_bump.py  diag_cluster_replay.py  diag_embed_probe.py  diag_embed_when_broken.py  diag_matcher_skip.py  diag_telegram_state.py  editorial.py  embed_comparison.py  export_telegram_session.py  journalist_audit.py  journalist_report.json  kamran_report.json  kamran_strategist.py  mina_report.json  mina_translator.py  neutrality_audit.py  niloofar_editorial.py  niloofar_notepad.md  niloofar_source_scores.py  niloofar_weekly.py  purge_mega_cluster.py  r2_db_backup.py  reza_devils_advocate.py  reza_report.json  sara_report.json  sara_ux_researcher.py  scrub_hallucinated_sides.py  seed_sources_v2.py  smoke_health.py  split_bfd468e0.py  telegram_auth.py  telegram_catchup.py  tg_auth_step1.py  tg_auth_step2.py  (+5 more)
backend/tests/: test_api_contracts.py  test_bias_scoring_parsing.py  test_blindspot.py  test_clustering_safety.py  test_content_type.py  test_events.py  test_farsi_title_backfill_scope.py  test_homepage_dedup.py  test_ingestion_helpers.py  test_llm_pricing.py  test_narrative_groups.py  test_persian.py  test_persian_boilerplate.py  test_pipeline_shape.py  test_regression_cases.py  test_stale_homepage_canary.py  test_story_analysis_parsing.py  test_story_freshness.py  test_telegram_analysis.py  test_title_lock.py  test_translate_multilocale.py  test_war_audit_fixes.py  test_worldview_grounding.py
(+299 files in other folders)
