[project]
name = "doornegar-backend"
version = "0.1.0"
description = "Doornegar - Iranian Media Transparency Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    # pgvector: binary vector type for embeddings. Drops Article.embedding
    # row weight from 3,772 B (JSONB array of 384 floats) to ~1,540 B
    # (binary float4×384), and enables Postgres-side cosine similarity
    # via the `<=>` operator (no need to ship vectors back to Python).
    # Cycle-4 egress structural fix.
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "aioboto3>=13.0",
    "slowapi>=0.1.9",
    "feedparser>=6.0",
    "trafilatura>=1.8",
    "langdetect>=1.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "jdatetime>=5.0",
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
nlp = [
    "hazm>=0.10",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "transformers>=4.40",
]
llm = [
    "anthropic>=0.30",
    "openai>=1.30",
]
social = [
    "telethon>=1.36",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    # numpy is needed by test_war_audit_fixes (it imports nlp_pipeline →
    # embeddings → numpy). Heavy ML deps (torch, sentence-transformers,
    # transformers) stay out via the [nlp] extras — those are loaded
    # only at runtime on Railway, not in CI.
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
